--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-ts": "^5.5.1",
-    "grunt-wiredep": "^3.0.1"
+    "grunt-ts": "^6.0.0-beta.15",
+    "grunt-wiredep": "^3.0.1",
+    "typescript": "^2.3.2"
   }
 }
